--- a/templates/dashboard/css/dashboard.css
+++ b/templates/dashboard/css/dashboard.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body{
-  font-family: Arial;
+  font-family: 'Open Sans', sans-serif;
   font-size: 14px;
 }
 /*global wrapper*/
@@ -58,9 +58,83 @@ body{
   font-size: 16px;
   font-weight: normal;
 }
+/*main container*/
+#main{
+  width: 100%;
+  height: auto;
+  min-height: 500px;
+  margin-top: 20px;
+}
+/*footer style*/
+#footer{
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  font-size: 14px;
+  background: #f1f1f1;
+  padding: 0 10px;
+  text-align: center;
+  color: #4d4d4f;
+  -webkit-box-shadow: 0px -5px 10px 0px rgba(204, 204, 204, 0.75);
+  -moz-box-shadow: 0px -5px 10px 0px rgba(204, 204, 204, 0.75);
+  box-shadow: 0px -5px 10px 0px rgba(204, 204, 204, 0.75);
+}
 
 
-
+/*dashboard styling*/
+.dashboard{
+  width: 100%;
+  height: auto;
+}
+.dashboard .box_wrap{
+  width: 100%;
+  float: left;
+  padding: 20px;
+  border: 1px solid #d2d2d2;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+  -moz-box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+  box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+}
+.dashboard .box_wrap h2{
+  width: 100%;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+.dashboard .language_progress{
+  width: 48%;
+  margin-right: 4%;
+  float: left;
+  height: 250px;
+}
+.dashboard .language_progress ul{
+  list-style: none;
+  text-align: left;
+}
+.dashboard .language_progress ul li{
+  width: 120px;
+  height: 120px;
+  text-align: center;
+  line-height: 120px;
+  background: #d2ead7;
+  border-radius: 100%;
+  display: inline-block;
+  margin-right: 15px;
+  font-size: 16px;
+}
+.dashboard .total_points{
+  width: 48%;
+  float: left;
+  height: 250px;
+}
+.dashboard .total_points .points{
+  font-size: 100px;
+  line-height: 100px;
+  color: #d2ead7;
+}
 
 
 
