--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
+    <script  src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="  crossorigin="anonymous"></script>
+    <script src="js/dashboard.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/dashboard.css">
   </head>
@@ -30,13 +33,44 @@
     </div>
     <!-- endof::header -->
 
-    <div class="main">
+    <div id="main">
+      <div class="page_wrap">
 
+        <div class="dashboard">
+          <div class="box_wrap language_progress">
+            <h2>Languages in progress:</h2>
+            <ul>
+              <li>Spanish</li>
+              <li>French</li>
+              <li>Japanese</li>
+            </ul>
+          </div>
 
+          <div class="box_wrap total_points">
+            <h2>Lifetime points earned:</h2>
+
+            <div class="points">
+              382
+            </div>
+          </div>
+
+          <div class="box_wrap achievements">
+            <h2>Achiements:</h2>
+
+          </div>
+
+          <div class="box_wrap statistics">
+            <h2>Statistics:</h2>
+
+          </div>
+
+        </div>
+
+      </div>
     </div>
-
+    <!-- endof::main -->
     <div id="footer">
-      
+      Copyright (c) 2017 Copyright Holder All Rights Reserved.
     </div>
   </body>
 </html>
