--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -12,17 +12,26 @@
 
         <img src="img/ListenUp_logo_white.png" class ="navLogo">
 
-        <div class="loginButton">
-            <a href="#">Login</a>
-        </div>
+        <ul>
+                <li class = "signupButton getStartedButton"><a href="#">Get Started</a></li>
+                <li class = "loginButton"><a href="#">Login</a></li>
+
+        </ul>
+
 
     </nav>
 
     <section class="intro">  
         <div class="content">
+
         <h1 class="whiteHeader">Practice your listening comprehension
             by listening to how natives <em>actually</em> talk.
         </h1>
+
+        <div class="centerButton signupButton">
+            <a href="#">Get Started</a>
+        </div>
+
     </div>
     </section>
 
