--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-        <link rel="stylesheet" type="text/css" href="css/landing.css"> 
+        <link rel="stylesheet" type="text/css" href="css/home.css"> 
 </head>
 
 <body>
