updated home page

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,24 +3,22 @@
 <html>
 
 <head>
-        <link rel="stylesheet" type="text/css" href="css/home.css"> 
+    <link rel="stylesheet" type="text/css" href="css/home.css"> 
 </head>
 
 <body>
-
+    <div class = "wrapper">
+    
+    <!--Nav-->
     <nav>
-
-        <img src="img/ListenUp_logo_white.png" class ="navLogo">
-
+        <img src="img/ListenUp_logo_white.png" class ="logo">
         <ul>
-                <li class = "signupButton getStartedButton"><a href="#">Get Started</a></li>
-                <li class = "loginButton"><a href="#">Login</a></li>
-
+            <li class = "signupButton getStartedButton"><a href="#">Get Started</a></li>
+            <li class = "loginButton"><a href="#">Login</a></li>
         </ul>
-
-
     </nav>
 
+    <!--Section 1 (Intro/Greeting)-->
     <section class="intro">  
         <div class="content">
 
@@ -35,6 +33,7 @@
     </div>
     </section>
 
+    <!--Section 2 (About)-->
     <section class="about">
         <div class="content">
             <h2>This is another test header</h2>
@@ -53,6 +52,7 @@
         </div>
     </section>
 
+    <!--Section 3 (How it works)-->
     <section class="howitworks">
         <div class="content">
             <h3>how it works</h3>
@@ -65,6 +65,7 @@
     <a href="#">Credits</a>
   </footer>
 
+    </div>
   </body>
   
   </html>
