--- a/templates/home/css/home.css
+++ b/templates/home/css/home.css
@@ -31,8 +31,7 @@
 
   nav ul {
       float: right;
-      margin-right: 2%;
-      margin-top: 2%;
+      margin-right: 20px;
       white-space: nowrap;
   }
 
@@ -48,22 +47,14 @@
       text-align: center;
   }
 
-  .navLogo {
-    width: 200px;
-    height: 50px;
+  nav .logo {
+    width: 20%;
+    height: auto;
     margin: .5%;
     height: auto;
     float: left;
   }
 
-  /*
-  .loginButton {
-      float: right;
-      margin-right: 5%;
-      margin-top: 2%;
-      white-space: nowrap;
-  }
-*/
   /*--------intro----------*/
   
   .intro {
