--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/home.css"> 
 </head>
 
@@ -18,7 +19,7 @@
         </ul>
     </nav>
 
-    <!--Section 1 (Intro/Greeting)-->
+    <!--Section 1 (Greeting)-->
     <section class="intro">  
         <div class="content">
 
@@ -36,19 +37,28 @@
     <!--Section 2 (About)-->
     <section class="about">
         <div class="content">
+
             <h2>This is another test header</h2>
             <h1 class="blueHeader">It's time to listenUP.</h1>
 
-            
-            <h4>real speakers.</h4>
-            <p>This is a test paragraph about real speakers.</p>
+            <div class = "columns-3">
+                
+                <div class = "col-left">
+                    <h4>real speakers.</h4>
+                    <p>This is a test paragraph about real speakers.</p>
+                </div>
 
-            <h4>real talk.</h4>
-            <p>This is a test paragraph about real talk.</p>
-            
-            <h4>real effective.</h4>
-            <p>This is a test paragraph about real effectiveness.</p>
-            
+                <div class = "col-center">
+                    <h4>real talk.</h4>
+                    <p>This is a test paragraph about real talk.</p>
+                </div>
+
+                <div class = "col-right">        
+                    <h4>real effective.</h4>
+                    <p>This is a test paragraph about real effectiveness.</p>
+                </div>
+
+            </div>
         </div>
     </section>
 
@@ -57,6 +67,37 @@
         <div class="content">
             <h3>how it works</h3>
 
+            <div class = "columns-3">
+                    
+                    <div class = "col-left">
+                        <img src ="img/icon_speaker_blue.png">
+                        <h4>listen to native speakers talk.</h4>
+                        <p>We'll play short clips of native speakers 
+                            having natural conversations, answering 
+                            interview questions, or doing skits.
+                        </p>
+                    </div>
+    
+                    <div class = "col-center">
+                        <img src ="img/icon_speaker_blue.png">
+                                               
+                        <h4>test your listening comprehension.</h4>
+                        <p>We offer two exercises: Transcription and Quiz. 
+                            You'll either transcribe the given audio clip or 
+                            take a mini-quiz on the content presented.
+                        </p>                            
+                    </div>
+    
+                    <div class = "col-right">
+                        <img src ="img/icon_speaker_blue.png">                            
+                        <h4>get feedback. get better.</h4>
+                        <p>Get scored based on your answer. Review exercises 
+                            and improve over time with repetition. You'll be 
+                            listening like a pro in no time!
+                        </p>                                                        
+                    </div>
+    
+                </div>
 
         </div>
     </section>
