--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -15,7 +15,7 @@
         <img src="img/ListenUp_logo_white.png" class ="logo">
         <ul>
             <li class = "signupButton getStartedButton"><a href="#">Get Started</a></li>
-            <li class = "loginButton"><a href="#">Login</a></li>
+            <li class = "whiteLink"><a href="#">Login</a></li>
         </ul>
     </nav>
 
@@ -24,7 +24,7 @@
         <div class="content">
 
         <h1 class="whiteHeader">Practice your listening comprehension
-            by listening to how natives <em>actually</em> talk.
+            by listening to how natives <strong>actually</strong> talk.
         </h1>
 
         <div class="centerButton signupButton">
@@ -38,24 +38,34 @@
     <section class="about">
         <div class="content">
 
-            <h2>This is another test header</h2>
+            <h2>So, you still can’t understand anything that native speakers are saying.
+                Welcome to the <em>«Intermediate Hell»</em> of language learning.</h2>
             <h1 class="blueHeader">It's time to listenUP.</h1>
 
-            <div class = "columns-3">
+            <div class = "column-container">
                 
-                <div class = "col-left">
+                <div class = "col">
                     <h4>real speakers.</h4>
-                    <p>This is a test paragraph about real speakers.</p>
+                    <p>Listen to audio clips of native
+                        speakers in your target language
+                        as they answer questions or
+                        discuss everyday topics.</p>
                 </div>
 
-                <div class = "col-center">
+                <div class = "col">
                     <h4>real talk.</h4>
-                    <p>This is a test paragraph about real talk.</p>
+                    <p>Ditch the scripted conversations
+                        for beginners and get a feel for how
+                        natives truly express themselves,
+                        like, um... filler words and all!</p>
                 </div>
 
-                <div class = "col-right">        
+                <div class = "col">        
                     <h4>real effective.</h4>
-                    <p>This is a test paragraph about real effectiveness.</p>
+                    <p>All 2 of our test subjects have
+                        agreed that listenUp is helpful.
+                        That’s, like, half of our entire
+                        development team!</p>
                 </div>
 
             </div>
@@ -67,30 +77,30 @@
         <div class="content">
             <h3>how it works</h3>
 
-            <div class = "columns-3">
+            <div class = "column-container">
                     
-                    <div class = "col-left">
-                        <img src ="img/icon_speaker_blue.png">
-                        <h4>listen to native speakers talk.</h4>
+                    <div class = "col">
+                        <img src ="img/how_screenshot.png">
+                        <h4>listen.</h4>
                         <p>We'll play short clips of native speakers 
                             having natural conversations, answering 
                             interview questions, or doing skits.
                         </p>
                     </div>
     
-                    <div class = "col-center">
-                        <img src ="img/icon_speaker_blue.png">
+                    <div class = "col">
+                        <img src ="img/how_screenshot.png">
                                                
-                        <h4>test your listening comprehension.</h4>
+                        <h4>answer.</h4>
                         <p>We offer two exercises: Transcription and Quiz. 
                             You'll either transcribe the given audio clip or 
                             take a mini-quiz on the content presented.
                         </p>                            
                     </div>
     
-                    <div class = "col-right">
-                        <img src ="img/icon_speaker_blue.png">                            
-                        <h4>get feedback. get better.</h4>
+                    <div class = "col">
+                        <img src ="img/how_screenshot.png">                            
+                        <h4>learn.</h4>
                         <p>Get scored based on your answer. Review exercises 
                             and improve over time with repetition. You'll be 
                             listening like a pro in no time!
@@ -103,7 +113,7 @@
     </section>
   
   <footer>
-    <a href="#">Credits</a>
+    <a href="#" class="whiteLink">Credits</a>
   </footer>
 
     </div>
