--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -10,14 +10,15 @@
 <body>
     <div class = "wrapper">
     
-    <!--Nav-->
-    <nav>
+    <!--Header-->
+    <header>
         <img src="img/ListenUp_logo_white.png" class ="logo">
-        <ul>
-            <li class = "signupButton getStartedButton"><a href="#">Get Started</a></li>
-            <li class = "whiteLink"><a href="#">Login</a></li>
-        </ul>
-    </nav>
+        <div class="header-buttons">
+            <ul>
+                <li class = "button loginButton"><a href="#">Login</a></li>
+            </ul>
+        </div>
+    </header>
 
     <!--Section 1 (Greeting)-->
     <section class="intro">  
