--- a/templates/home/css/home.css
+++ b/templates/home/css/home.css
@@ -1,7 +1,42 @@
+@font-face {
+	font-family: 'Pragmatica';
+	src: url('fonts/PragmaticaItalic.eot');
+	src: url('fonts/PragmaticaItalic.eot?#iefix') format('embedded-opentype'),
+		url('fonts/PragmaticaItalic.woff2') format('woff2'),
+		url('fonts/PragmaticaItalic.woff') format('woff'),
+		url('fonts/PragmaticaItalic.ttf') format('truetype'),
+		url('fonts/PragmaticaItalic.svg#PragmaticaItalic') format('svg');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Pragmatica';
+	src: url('fonts/PragmaticaBold.eot');
+	src: url('fonts/PragmaticaBold.eot?#iefix') format('embedded-opentype'),
+		url('fonts/PragmaticaBold.woff2') format('woff2'),
+		url('fonts/PragmaticaBold.woff') format('woff'),
+		url('fonts/PragmaticaBold.ttf') format('truetype'),
+		url('fonts/PragmaticaBold.svg#PragmaticaBold') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Pragmatica';
+	src: url('fonts/Pragmatica.eot');
+	src: url('fonts/Pragmatica.eot?#iefix') format('embedded-opentype'),
+		url('fonts/Pragmatica.woff2') format('woff2'),
+		url('fonts/Pragmatica.woff') format('woff'),
+		url('fonts/Pragmatica.ttf') format('truetype'),
+		url('fonts/Pragmatica.svg#Pragmatica') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 * {
     box-sizing: border-box; 
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
+    font-family: Pragmatica;
 }
   
   body {
@@ -129,7 +164,8 @@
   h1, h2, h3, h4, h5 {
       font-size: 2em;
       display: block;
-      color: #475055; 
+      color: #475055;
+      font-weight: lighter; 
   }
   
   h1, h3 {
