--- a/templates/transcription/index.html
+++ b/templates/transcription/index.html
@@ -21,7 +21,24 @@
         <div class="wrapper">
                 <div class="content">
 
-                    Test
+                    <h4>transcription</h4>
+
+                    <div class="lang-score">
+                        <ul>
+                            <li><img src="img/icon_fr.png" class="circleIcon"></li>
+                            <li><p class = "score circleIcon">10</p></li>
+                        </ul>
+                    </div>
+
+                    <div class="exercise">
+                        <div class="audioPlayer">
+
+                        </div>
+
+                        <div class="input-tooltip">
+                            
+                        </div>
+                    </div>
 
                 </div>
         </div>
