commiting some changes

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
     <script  src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="  crossorigin="anonymous"></script>
     <script src="js/dashboard.js" charset="utf-8"></script>
