--- a/templates/setting/index.html
+++ b/templates/setting/index.html
@@ -2,31 +2,51 @@
 <html>
 	<head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/setting.css"> 
 	</head>
 	
 	<body>
+		<nav>
+			<img src="img/ListenUp_logo_gray.png" class ="logo">
+			<ul>
+				<li class = "Dashboard"><a href="#">Dashboard</a></li>
+				<li class = "Logout"><a href="#">Logout</a></li>
+			</ul>
+		</nav>
+		
+		<div align="center">
+		<div class="container">	
 		<form>
 			<fieldset>
 				<legend> Setting: </legend>
 				<div>
-					<label>Username: <br> <input type = "text" id="username"></label> <br>
+					<label>Username: <br> <input type = "user" id="username"></label> <br>
 					<button type="submit">Change username</button>
 				</div>	
 				
 				<div>
-					<label>Email: <br> <input type = "text" id="email"></label> <br>
+					<label>Email: <br> <input type = "email" id="email"></label> <br>
 					<button type = "submit">Change email</button>
 				</div>
 			</fieldset>
 			
 			<fieldset>
 				<legend> Password: </legend>
-				<label>Old Password: <br> <input type = "text" id="password"></label><br>
-				<label>New Password: <br> <input type = "text" id="newpass"></label><br>
-				<button type="submit">Submit</button>
+				<label>Old Password: <br> <input type = "pass" id="password"></label><br>
+				<label>New Password: <br> <input type = "pass" id="newpass"></label><br>
+				<button type="submit">Change Password</button>
+			</fieldset>
+
+			<fieldset>
+				<legend>Reset Language</legend>
+				<input type="checkbox">English
+				<input type="checkbox">French
+				<button type="submit">Reset Language</button>
 			</fieldset>
 		</form>
+		</div>
+		</div>
 	</body>
 	
 </html>
