--- a/templates/signup/index.html
+++ b/templates/signup/index.html
@@ -6,95 +6,15 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width">
 	<title>Signup</title>
-
-	<style>
-		.content {
-			max-width: 100%;
-			margin: auto;
-		}
-
-		.page_wrap {
-			max-width: 1200px;
-
-			}
-
-		#header {
-			width: 100%;
-			height: auto;
-			background: #475c64;
-
-		}
-		#header .logo{
-			float: left;
-
-		}
-
-		#header .button{
-			background-color: #4CAF50;
-			border: 2px solid;
-			border-radius: 5px;
-			color: white;
-			padding: 15px 32px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-			font-size: 16px;
-			margin: 4px 2px;
-			cursor: pointer;
-			float: right;
-		}
-
-		#header .signup{
-
-		}
-		
-		html {
-			background-color: #475c64;
-		}
-		
-		body {
-			background-color: white;
-			max-width: 1200px;
-			margin: auto;
-			padding-left: 20px;
-			padding-right: 20px;
-			align: center;
-		}
-
-		#main p{
-			color:red;
-		}
-		.content p{
-			color: blue;
-		}
-		.clearfix:after {
-		  visibility: hidden;
-		  display: block;
-		  font-size: 0;
-		  content: " ";
-		  clear: both;
-		  height: 0;
-		}
-		.clearfix { display: inline-block; }
-		/* start commented backslash hack \*/
-		* html .clearfix { height: 1%; }
-		.clearfix { display: block; }
-		/* close commented backslash hack */
-
-
-	</style>
+    <link rel="stylesheet" href="css/style.css">
 	</head>
 
 	<body>
 
-
-
-
 		<div id="header" class="clearfix">
 			<div class="page_wrap">
 				<div class="logo">
-					<img src="ListenUp_logo_gray.png" alt="listenUp_logo"
-					style="width: 300px;">
+					<img src="img/ListenUp_logo_white.png" alt="listenUp_logo">
 				</div>
 
 				<div class="homebutton">
@@ -109,7 +29,7 @@
 		<!-- end of header -->
 
 		<div id="main">
-			<div class="page-wrap">
+			<div class="page_wrap">
 				<div class="signup">
 					<fieldset>
 						<form action="/submit.php">
