added tooltip placeholder

--- a/templates/transcription/index.html
+++ b/templates/transcription/index.html
@@ -29,7 +29,7 @@
                             <img src="img/icon_fr.png">
                         </div>
                         <div class="score-icon icon">
-                            <p>10</p>
+                            <p>9</p>
                         </div>
                     </div>
             </section>
@@ -46,7 +46,7 @@
                         <img src="img/audio_controls_stop.png" class="audio-button">
                     </div>
                 </div>
-                <div class="input-panel">
+                <div class="input-panel flex-container">
 
                     <div class="user-input">
 
@@ -74,6 +74,14 @@
                     </div>
 
                     <div class="tooltip">
+
+                        <h5>here's a tip</h5>
+
+                        <p>You can skip fillers sounds like "umm..." and "uhh...",
+                            but remember to include filler <em>words</em> such as
+                            "like" and "well."
+                        </p>
+
 
                     </div>
 
