--- a/templates/transcription/css/transcription.css
+++ b/templates/transcription/css/transcription.css
@@ -164,13 +164,15 @@ ul {
 
 .input-panel {
     padding: 2%;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .user-input textarea {
     resize: none;
-    margin-top: 16px;
     display: block;
     width: 100%;
+    height: 100px;
 }
 
 .user-input ul li {
@@ -178,19 +180,19 @@ ul {
     text-align: center;
 }
 
+
 /*---Misc Formatting---*/
 
 a:visited {
     color: #475c64;
 }
 
-h1, h2, h3, h4, h5 {
-    font-size: 2rem;
+h1, h2, h3, h4, h5, h6 {
     font-weight: lighter;
     color: #33669a;
 }
 
-h5 {
+h4, h5 {
     font-size: 1.5rem;
 }
 
