--- a/templates/signup/css/style.css
+++ b/templates/signup/css/style.css
@@ -32,12 +32,13 @@ body {
     width: 300px;
     float: left;
 }
+
 #header .logo img{
     width: 100%;
 }
 
 #header .button{
-    background-color: #4CAF50;
+    background-color: #475c64;
     border: 2px solid;
     border-radius: 5px;
     color: white;
@@ -51,11 +52,26 @@ body {
     float: right;
 }
 
-#header .signup{
-
+#main .signup{
+    width: 300px;
+    margin: auto;
+    margin-top: 250px;
 }
 
+#main .signup .input_wrapper{
+    max-width: 300px;
+}
 
+#main .signup .input_wrapper input{
+    margin-top: 20px;
+    maxlength: 20;
+    size: 14;
+}
+
+#main .signup .login{
+    max-width: 300px;
+    margin-top: 20px;
+}
 
 #main p{
     color:red;
