--- a/templates/transcription/index.html
+++ b/templates/transcription/index.html
@@ -52,7 +52,7 @@
 
                         <h5>type what you hear:</h5>
 
-                        <textarea name="user-input"></textarea>
+                        <textarea name="user-input" spellcheck="false"></textarea>
 
                         <ul class="char-bar flex-container">
 
@@ -71,6 +71,10 @@
 
                         </ul>
 
+                    </div>
+
+                    <div class="skip-button">
+                        <h5>enter/skip button will go here</h5>
                     </div>
 
                     <div class="tooltip">
